# ai-e

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
.github/workflows/: pages.yml  release.yml  test.yml
devlog/: AGENTS.md
devlog/_plan/260516_ai_e_multi_provider/: 00_goal.md  01_implementation_log.md
devlog/_plan/260520_antigravity_cli_migration/: 00_goal.md  01_smoke_contract_and_inventory.md  02_pty_first_refactor_plan.md  03_provider_pty_smoke_matrix.md  04_claude_style_pty_contract.md  05_steer_resume_contract.md  06_external_review_pty_all.md  07_completion_audit.md  08_agy_interactive_pty_smoke_branch.md
devlog/_plan/260527_prebuilt_npm_release_contract/: 00_overview.md  01_phase1_package_contract.md
docs/: index.html
platform-packages/darwin-arm64/: package.json
platform-packages/darwin-x64/: package.json
platform-packages/linux-arm64/: package.json
platform-packages/linux-x64/: package.json
scripts/: ensure-npm-auth.sh  postinstall.cjs  publish-dry-run.mjs  release-npm.sh  release-preview.sh  release.sh  smoke.sh  star-prompt.cjs  sync-cargo-version.mjs  sync-package-versions.mjs
src/: args.rs  cleanup.rs  config.rs  headless.rs  hook.rs  interactive.rs  interactive_normalize.rs  interactive_providers.rs  lib.rs  normalize.rs  print_mode.rs  protocol.rs  terminal.rs  transcript.rs
src/providers/: claude_code.rs  kiro_session.rs  mod.rs
structure/: AGENTS.md  INDEX.md  cli_jaw_migration.md  cli_surface.md  provider_adapter.md  runtime_contract.md
tests/: package-contract.test.cjs  star-prompt.test.cjs
(+6 files in other folders)
