[package]
name = "ai-exec"
version = "0.1.5-preview.20260531041457"
edition = "2024"
description = "Modular PTY-backed exec wrapper for interactive AI CLIs"
license = "MIT"
repository = "https://github.com/lidge-jun/ai-e"
default-run = "ai-e"
autobins = false
publish = false

[[bin]]
name = "ai-e"
path = "src/bin/ai-e.rs"

[dependencies]
portable-pty = "0.9"
vt100 = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["signal", "process", "fs"] }
signal-hook = "0.3"
tempfile = "3"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
strip = true
lto = true
opt-level = "z"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
panic = "warn"
